fix bug align launchBase

--- a/styles.css
+++ b/styles.css
@@ -466,7 +466,8 @@ nav {
     gap: 1.5rem;
   }
 
-  #launchBase #requirements .group > p {
+  #launchBase #requirements #group .align:first-child > p,
+  #launchBase #requirements #group .align:last-child > p {
     text-align: center;
   }
 
